--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <!-- CHAT LIST -->
             <div class="chatlist">
-                <div class="block active">
+                <div class="block unread">
                     <div class="imgBox">
                         <img src="Images/alex.jpg" class="cover" alt="">
                     </div>
